# Weapon

./: .gitignore  Makefile  app.py  docker-compose.yml  pyproject.toml
configs/: Database.py  Environment.py
migrations/: env.py
routing/v1/: ml.py
utils/: errors.py  wrappers.py
